syntax = "proto3";
package models;

message UserProfileDto {
  string username = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message CpuComponentDto {
  string uuid = 1;
  string displayName = 2;
  int32 coreCount = 3;
  int32 coreClock = 4;
  int32 boostClock = 5;
  int32 tdp = 6;
  string integratedGraphics = 7;
  bool hasSmt = 8;
  int32 price = 9;
}

message CpuComponentListDto {
  repeated CpuComponentDto cpuComponents = 1;
}

message MotherboardComponentDto {
  string uuid = 1;
  string displayName = 2;
  string cpuSocket = 3;
  string formFactor = 4;
  int32 maxMemoryGigabytes = 5;
  int32 numMemorySlots = 6;
  string colour = 7;
  int32 price = 8;
}

message MotherboardComponentListDto {
  repeated MotherboardComponentDto motherboardComponents = 1;
}

message MemoryComponentDto {
  string uuid = 1;
  string displayName = 2;
  int32 ddrVersion = 3;
  int32 ddrClock = 4;
  int32 numModules = 5;
  int32 moduleSizeGigabytes = 6;
  string colour = 7;
  int32 firstWordLatency = 8;
  int32 casLatency = 9;
  int32 price = 10;
}

message MemoryComponentListDto {
  repeated MemoryComponentDto memoryComponents = 1;
}

message StorageComponentDto {
  string uuid = 1;
  string displayName = 2;
  int32 capacityGigabytes = 3;
  string type = 4;
  int32 cacheSizeMegabytes = 5;
  string formFactor = 6;
  string interface = 7;
  int32 price = 8;
}

message StorageComponentListDto {
  repeated StorageComponentDto storageComponents = 1;
}

message VideoCardComponentDto {
  string uuid = 1;
  string displayName = 2;
  string chipset = 3;
  int32 memoryGigabytes = 4;
  int32 coreClock = 5;
  int32 boostClock = 6;
  string colour = 7;
  int32 lengthMillimeters = 8;
  int32 price = 9;
}

message VideoCardComponentListDto {
  repeated VideoCardComponentDto videoCardComponents = 1;
}

message PowerSupplyComponentDto {
  string uuid = 1;
  string displayName = 2;
  string type = 3;
  string efficiency = 4;
  int32 wattage = 5;
  string modular = 6;
  string colour = 7;
  int32 price = 8;
}

message PowerSupplyComponentListDto {
  repeated PowerSupplyComponentDto powerSupplyComponents = 1;
}

message ComputerBuildDto {
  string uuid = 1;
  string displayName = 2;
  string description = 3;
  string username = 4;
  CpuComponentListDto cpuList = 5;
  MotherboardComponentListDto motherboardList = 6;
  StorageComponentListDto storageList = 7;
  MemoryComponentListDto memoryList = 8;
  VideoCardComponentListDto videoCardList = 9;
  PowerSupplyComponentListDto powerSupplyList = 10;
  int64 creationDate = 11;
  int64 lastUpdateDate = 12;
}

message ComputerBuildListDto {
  repeated ComputerBuildDto computerBuilds = 1;
}

message ComputerBuildCommentDto {
  string authorName = 1;
  string content = 2;
  string lastUpdatedDate = 4;
}

message ComputerBuildDraftDto {
  string displayName = 1;
  string description = 2;
  repeated string cpuIds = 3;
  repeated string motherboardIds = 4;
  repeated string storageIds = 5;
  repeated string memoryIds = 6;
  repeated string videoCardIds = 7;
  repeated string powerSupplyIds = 8;
}
