syntax = "proto3";
package transfers;

message UserProfile {
  string username = 1;
  string displayName = 2;
  string password = 3;
}

message Comment {
  string authorName = 1;
  string content = 2;
  string lastUpdatedDate = 4;
}
